--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,23 @@
 spring.application.name=descontodiretoapi
 
-spring.datasource.url=jdbc:mysql://localhost:1010/dddb?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:1010/dddb?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:postgresql://localhost:5432/bddd
+#spring.datasource.username=root
+#spring.datasource.password=
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=123
+spring.datasource.username=postgres
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+
